<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#D1BDB6"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="15dp"
        android:src="@drawable/icon1"
        app:civ_border_color="#000"
        app:civ_border_width="2dp" />
    <TextView
        android:id="@+id/my_name"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_toEndOf="@id/profile_image"
        android:text="@string/mahdi_hasanzadeh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_below="@id/my_name"
        android:layout_toEndOf="@id/profile_image"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:id="@+id/phone_number"
        android:text="@string/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="45dp"
        android:id="@+id/img_test2_accept"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/accept"
        android:src="@drawable/icon_done" />





</RelativeLayout>